# ai-team

./: .env.example  .gitignore  .markdownlint.jsonc  .prettierignore  .prettierrc.cjs  .stylelintrc.cjs  CLAUDE.md  PR_DESCRIPTION.md  README.md  SECURITY.md  SYSTEM_PROMPT.md  eslint.config.js  package-lock.json  package.json  test-hr-api.sh  tsconfig.json  vitest.config.ts
.config/: nuxt.config.ts  tailwind.config.js  tailwind.config.ts
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-filesystem-access.md
.github/prompts/: README.md  assign-to-agent.prompt.md  brainstorm.prompt.md  break-issue.prompt.md  commit4gemini.prompt.md  dev-task.prompt.md  editorial-cleanup.prompt.md  email-mcp-server.prompt.md  mcp-server.prompt.md  plan-next-steps.prompt.md  prompt.prompt.md  reverse.aii.prompt.md  sequential-issues.example.md  test-generation.prompt.md  (+1 more)
.specify/: WORKFLOW.md
app/: app.vue
docs/: F059-MIGRATION.md  MCP Filesystem Tools for LLMs.md  README.md  chat-api-tool-integration-test.md  filesystem-security-implementation.md
mcp-server-email/: .env.example  .gitignore  README.md  pyproject.toml  test_email_mcp.py
mcp-server-email/src/: __init__.py  server.py
mcp-server-kali-pentest/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  LICENSE  README.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: bootstrap-marcus.sh  test-filesystem-security.sh  update-tests-whitelist.sh
test/: validateAllocations.spec.ts
tests/: setup.ts
types/: index.ts  nuxt-tailwind-module.d.ts
(+328 files in other folders)
